*: remove intermediate definitions from API v2 spec
The PHP generated code doesn't work properly with array-based
definitions such as 'matchers' (at least for setters). Removing those
definitions doesn't change the underlying logic and produces code
that is easier to read IMHO.
